# unosend

./: README.md  TODO.md  middleware.ts  package-lock.json  package.json
.github/: copilot-instructions.md
app/: layout.tsx  page.tsx  robots.ts  sitemap.ts
app/(dashboard)/: dashboard-shell.tsx  layout.tsx
app/(editor)/: layout.tsx
app/(onboarding)/: layout.tsx
app/contact/: page.tsx
app/docs/: layout.tsx  page.tsx
app/pricing/: page.tsx
app/privacy/: page.tsx
app/terms/: page.tsx
components/: animated-code-block.tsx  command-palette.tsx  faq-section.tsx  hero-animation.tsx  india-pricing-banner.tsx
components/auth/: forgot-password-form.tsx  login-form.tsx  reset-password-form.tsx  signup-form.tsx
components/dashboard/: add-contact-button.tsx  add-domain-button.tsx  api-keys-list.tsx  billing-settings.tsx  create-api-key-button.tsx  create-audience-button.tsx  create-broadcast-button.tsx  create-template-button.tsx  create-webhook-button.tsx  domains-list.tsx  email-styles-panel.tsx  emails-list.tsx  export-button.tsx  import-contacts-button.tsx  logs-client.tsx  members-settings.tsx  metrics-client.tsx  nav.tsx  search-filter.tsx  send-test-email-button.tsx  settings-form.tsx  settings-tabs.tsx  sidebar.tsx  top-nav.tsx  usage-chart.tsx  usage-settings.tsx  (+2 more)
lib/: api-logging.ts  api-middleware.ts  api-utils.ts  crypto.ts  email-service.ts  validations.ts  webhook-service.ts
public/: schema.json
sdks/python/: README.md  pyproject.toml
sdks/python/unosend/: __init__.py  client.py  types.py
supabase/: config.toml
types/: database.ts
(+168 files in other folders)
